Atualizando informações da Base Colaborativa

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,9 +1,7 @@
-company_name: The Sheep Vote
+company_name: Base Colaborativa
 mission_statement: A Base Colaborativa é uma associação sem fins lucrativos que conecta pessoas, organizações e sociedade com a verdadeira revolução da inovação social.
 address: Rio de Janeiro, RJ
-phone: +55 21 99999 9999
+phone: (21) 99401-2225
 email: rio@basecolaborativa.org
 facebook: basecolaborativariodejaneiro
 instagram: basecolaborativa.rio
-#twitter: CloudCannonApp
-#google_plus: +CloudCannon
